# kintsugi-dam

./: .gitattributes  .gitignore  AGENTS.md  Dockerfile  Guide.md  README.md  docker-compose.yml  test_memory.py  update_page.py
.github/workflows/: release.yml
backend/: check_wasmtime.py  poc_ast_bypass.py  poc_executor_block.py  poc_scanner.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18352b12f428_initial_revision.py  65738c6acb6d_rename_hashed_date_to_scanned_at.py  de9421286d3c_replace_privileged_with_permissions_.py
backend/app/: main.py
backend/app/api/: auth.py  billing.py  license.py  routers.py  schemas.py
backend/app/core/: config.py  database.py  enhancement.py  hashing.py  http_client.py  image_utils.py  metrics.py  models.py  module_loader.py  nexus.py  notifications.py  plugin_manager.py  plugins.py  qos.py  remediation.py  scanner.py  scheduler.py  security.py  watcher.py
backend/app/modules/plugin_engine/: __init__.py  loader.py  manager.py  proxy_bus.py  schemas.py
backend/app/plugins/: ai_detector.py  ai_repair.py  base.py
backend/app/plugins/detectors/: jpeginfo.py  pillow_deep_scan.py
backend/app/plugins/remediation/: zfs_snapshot.py
backend/app/tasks/: prune.py
backend/data/: kintsugi.db  kintsugi.db-shm  kintsugi.db-wal
backend/kintsugi_rs/: Cargo.toml  pyproject.toml
backend/kintsugi_rs/src/: lib.rs
data/: jwt_secret.json  kintsugi.db
docs/: ARCHITECTURE.md  DESIGN.md
frontend/: package-lock.json  package.json
frontend/frontend/: Dockerfile  package-lock.json  package.json
(+23 files in other folders)
