[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "authlib>=1.3.0",
    "pydantic-settings>=2.0.0",
    "bcrypt<4.0.0",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "prometheus-client>=0.25.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "wasmtime>=44.0.0",
    "watchdog>=6.0.0",
    "paddle-python-sdk>=1.14.1",
    "itsdangerous>=2.2.0",
    "psutil>=7.2.2",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.1.3",
    "asyncpg>=0.31.0",
    "aiomysql>=0.3.2",
    "maturin>=1.13.1",
]
